k8s/base/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gsc
  labels:
    app.kubernetes.io/part-of: gsc-cloud
