k8s/base/04-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: gsc
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/poliakarmai/gsc-cloud:latest
          imagePullPolicy: Always
          command: ["python", "-m", "cloud.worker"]
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 2000m
